--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 # dependencies
 node_modules
+/.idea
+.idea
 /.pnp
 .pnp.js
 
@@ -21,3 +23,4 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
